# spritz

./: .clang-format  .gitignore  .gitmodules  .gitpod.yml  CMakeLists.txt  LICENSE  README.md  gitpod.DOCKERFILE
samples/: CMakeLists.txt
samples/spaceInvaders/: AnimationFrame.h  Bullet.cpp  Bullet.h  CMakeLists.txt  CollisionUtil.h  GameObject.h  Invader.cpp  Invader.h  InvaderManager.cpp  InvaderManager.h  Ship.cpp  Ship.h  TextureMapMeta.h  WindowConstants.h  spaceInvaders.cpp
sandbox/: CMakeLists.txt  sandbox.c
spritz/: CMakeLists.txt
spritz/include/: spritz_graphics_api.h  spritz_window.h
spritz/include/spritz/: camera.h  graphics_api.h  renderer.h  spritz.h  time.h  window.h
spritz/src/: camera.c  camera_internal.h  graphics_api.c  graphics_api_gl.c  graphics_api_gl.h  graphics_api_gl_shaders.c  graphics_api_gl_shaders.h  graphics_api_internal.h  graphics_api_vk.c  graphics_api_vk.h  renderer.c  renderer_internal.h  spritz.c  spritz_graphics_api.c  spritz_graphics_api.h  spritz_graphics_api_gl.c  spritz_graphics_api_gl.h  spritz_graphics_api_internal.h  spritz_window.c  spritz_window_internal.h  time.c  window.c  window_internal.h
testBench/: main.cpp
